# ctf-AI-agent

./: README.md
agent/: LOCAL_SOLVE.md  README.md  pyproject.toml  uv.toml
agent/backend/: local_cli.py  local_orchestrator.py  local_shared.py  local_tools.py  local_triage.py  skill_loader.py
agent/backend/agents/: local_codex_solver.py
agent/backend/tools/: core.py
prompt/: b2r.txt  crypto.txt  forensic.txt  pwn local.txt  pwn.txt  reverse.txt  web local.txt  web.txt
