[project]
name = "ctf-agent-two"
version = "0.1.0"
description = "Local Codex CLI CTF solver agent for single-challenge workflows"
requires-python = ">=3.13"
dependencies = [
    "pyyaml",
    "rich",
    "click",
]

[project.scripts]
ctf-local-solve = "backend.local_cli:main"
ctf-solve-local = "backend.local_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]
